# Quark

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b76373c  LICENSE.md  README.md
src/: CMakeLists.txt  engine.cpp  engine.h  entryPoint.cpp  entry_point.cpp  main.cpp  vulkanInit.cpp  vulkanInstance.cpp  vulkanValidation.cpp  vulkan_init.cpp  vulkan_validation.cpp  window.cpp
src/vulkan/: function_loader.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  vulkan_init.cpp  vulkan_instance.cpp  vulkan_validation.cpp
src/vulkan/utility/: span.hpp
